# Project_MSE

./: .gitattributes  .gitignore  Dockerfile  Indexer.py  MSE 24 Gruppenprojekte.ipynb  Main.py  README.md  allfileshas.txt  docker-compose.yml  dummyindex.csv  example_queries.txt  example_queries_eval_flat_rommel_smilga_diederichs.txt  frontier.json  pyproject.toml  queries_eval_flat_rommel_smilga_diederichs.txt  queryprocessing.ipynb  queryprocessing.py  search_engine.py
MSE_project/: pyproject.toml
data_retrieval/: Crawler.py  CrawlerLD.py
db/: Dockerfile  DocumentEntry.py  DocumentRepository.py  dump.sql
exp/: 001_Flat_db_example_connection.ipynb  002_Lenard_exp.ipynb  003_Flat_repository_example.ipynb  004_Nika_crawling_with_saving_to_db.ipynb  005_Flat_ranking_experiment.ipynb  006_Nika_crawling_with_checkpointing.ipynb  007_Flat_ndcg.ipynb  008_Flat_create_own_dataset.ipynb  009_Lilli_summarizer.ipynb  010_Flat_offline_enc_text_calc.ipynb  011_Flat_pipeline_evaluation.ipynb  011_fast_bm25.ipynb  012_Flat_precompute_inverted_index.ipynb  11_Flat_pipeline_evaluation.ipynb  CrawlerLD.py  CrawlerLD_with_indexing_NS.py  Ranker_Lenard.py
exp/data/: 008_kategorie_bm25_v2.xlsx  crawled_data_backup_2024-07-04_01-55-33.xlsx  crawled_data_backup_2024-07-04_01-55-33_repaired.xlsx
exp/local_model/: 010_Flat_offline_enc_text_calc.ipynb
paper/: paper.tex
ranker/: NDCG.py  NeuralRanker.py  QueryResult.py  Ranker.py  TextEmbeddings.py  bm25.ipynb  bm25.py  labeled_data.csv  labeled_data_file.csv  lambdamart_model.txt  lenard_exp.ipynb  neuralranker.py  ranker.py  tfidf_vectorizer.pkl
ranker/bm25/: bm25.ipynb  bm25.py
ranker/data/: Create_Training_Data.py
ranker/local_model/model/: config.json  model.safetensors.REMOVED.git-id
ranker/model/: test.py  train.py
templates/: index.html  notfound.html  search.html  test.html  website.html
utils/: directoryutil.py
