[tool.poetry]
name = "project-mse"
version = "0.1.0"
description = ""
authors = ["Flat <daniel.flat@wps.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-bootstrap = "^3.3.7.1"
torch = "^2.3.1"
pandas = "^1.5.3"
numpy = "^1.24.0"
lightgbm = "^4.0.0"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
